fix: align font size across different languages

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,4 +14,8 @@
   a {
     @apply hover:text-ctp-blue hover:underline;
   }
+
+  html:lang(zh) {
+    @apply text-base;
+  }
 }
